--- a/Schema/Schema.vcxproj
+++ b/Schema/Schema.vcxproj
@@ -39,17 +39,16 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -69,7 +68,7 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -84,6 +83,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\tibi\OneDrive\Dokumentumok\Visual Studio 2017\Projects\ZZZ Includes\jsoncpp-master\include2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -108,6 +108,12 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\tibi\OneDrive\Dokumentumok\Visual Studio 2017\Projects\ZZZ Includes\jsoncpp-master\include2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DebugInformationFormat>None</DebugInformationFormat>
+      <TreatWarningAsError>true</TreatWarningAsError>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -115,6 +121,38 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="array_validation.hh" />
+    <ClInclude Include="bool_validation.hh" />
+    <ClInclude Include="coroutine.hh" />
+    <ClInclude Include="coroutine.hpp" />
+    <ClInclude Include="delegate.hpp" />
+    <ClInclude Include="integer_validation.hh" />
+    <ClInclude Include="json_reference.hh" />
+    <ClInclude Include="null_validation.hh" />
+    <ClInclude Include="number_validation.hh" />
+    <ClInclude Include="object_validation.hh" />
+    <ClInclude Include="of_validation.hh" />
+    <ClInclude Include="of_validation.hpp" />
+    <ClInclude Include="size_validation.hh" />
+    <ClInclude Include="size_validation.hpp" />
+    <ClInclude Include="string_validation.hh" />
+    <ClInclude Include="validation_helper.hh" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="array_validation.cc" />
+    <ClCompile Include="bool_validation.cc" />
+    <ClCompile Include="coroutine.cc" />
+    <ClCompile Include="integer_validation.cc" />
+    <ClCompile Include="json_reference.cc" />
+    <ClCompile Include="null_validation.cc" />
+    <ClCompile Include="number_validation.cc" />
+    <ClCompile Include="object_validation.cc" />
+    <ClCompile Include="string_validation.cc" />
+    <ClCompile Include="validator.cc" />
+    <ClCompile Include="validation_helper.cc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="validator.hh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
